Added some markdown comments

--- a/HW2_CemS.ipynb
+++ b/HW2_CemS.ipynb
@@ -926,7 +926,9 @@
     "tags": []
    },
    "source": [
-    "# Solution 2"
+    "# Solution 2\n",
+    "\n",
+    "I will change the names of the columns using the source webpage for better readability."
    ]
   },
   {
@@ -1038,6 +1040,14 @@
     "df2 = fish\n",
     "df2.rename({0: 'CIC0', 1: 'SM1DZ',2:'GATS1I',3:'NDSCH',4:'NDSSC',5:'MLOGP',6:'LC50'}, axis=1, inplace = True)\n",
     "df2.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5464d282-4eb4-4d1a-81a0-2f340dc642fb",
+   "metadata": {},
+   "source": [
+    "Same steps as before, separate predictors and response and put predictors correlation heatmap."
    ]
   },
   {
@@ -2777,7 +2787,7 @@
    "id": "e23da53c-b55d-4926-b270-fce75f9d08ef",
    "metadata": {},
    "source": [
-    "I will select the rows with correlation values between $-0.04$ and $0.04$ for relatively low linear dependence."
+    "I will select the rows with correlation values between $-0.04$ and $0.04$ for relatively low linear dependence. The rows of the dataframe `predictors` will be the new independent variables."
    ]
   },
   {
