--- a/HW3/HW3.ipynb
+++ b/HW3/HW3.ipynb
@@ -1107,8 +1107,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 40,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[    0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0]\n",
+      " [    6 56963     6     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0]\n",
+      " [    0  2009     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0]\n",
+      " [    0  3726     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0]\n",
+      " [    0  1976     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0]\n",
+      " [    0  1394     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0]\n",
+      " [    0  2678     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0]\n",
+      " [    0  3959     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0]\n",
+      " [    0  3579     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0]\n",
+      " [    0 11271     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0]\n",
+      " [    0  6203     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0]\n",
+      " [    0  3278     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0]\n",
+      " [    0  1062     0     0     0     0     0     0     0     0     0     0\n",
+      "      6     0     0     0     0     0]\n",
+      " [    0  1927     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0]\n",
+      " [    0   916     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0]\n",
+      " [    0  1070     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0]\n",
+      " [    0  7268     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0]\n",
+      " [    0  1807     0     0     0     0     0     0     0     0     0     0\n",
+      "      0     0     0     0     0     0]]\n",
+      "Power_divergenceResult(statistic=10222045.201756911, pvalue=0.0)\n"
+     ]
+    }
+   ],
    "source": [
     "model = DBSCAN()\n",
     "model.fit(X)\n",
@@ -1123,8 +1167,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
