--- a/HW4_colab.ipynb
+++ b/HW4_colab.ipynb
@@ -2095,6 +2095,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Q1 Results"
+      ],
+      "metadata": {
+        "id": "YshlOQoGOTg6"
+      },
+      "id": "YshlOQoGOTg6"
+    },
+    {
       "cell_type": "code",
       "source": [
         "Q1Res = pd.DataFrame()\n",
