--- a/HW4_CemS.ipynb
+++ b/HW4_CemS.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 58,
       "id": "222a1585",
       "metadata": {
         "id": "222a1585"
@@ -29,7 +29,7 @@
         "from os import path\n",
         "from sklearn.model_selection import train_test_split\n",
         "from scipy.stats import chisquare\n",
-        "from sklearn.preprocessing import LabelEncoder\n",
+        "from sklearn.preprocessing import LabelEncoder,MinMaxScaler\n",
         "from sklearn.metrics import confusion_matrix,accuracy_score\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.svm import SVC\n",
@@ -3700,19 +3700,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 57,
-      "id": "a773d44d",
-      "metadata": {
-        "id": "a773d44d"
-      },
-      "outputs": [],
-      "source": [
-        "train = airline['value'][:123]\n",
-        "test = airline['value'][123:]"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "id": "d9534c73",
       "metadata": {
@@ -3728,16 +3715,99 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Recurrent"
+      ],
+      "metadata": {
+        "id": "zYBdD6Qb6jS4"
+      },
+      "id": "zYBdD6Qb6jS4"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## LSTM"
+      ],
+      "metadata": {
+        "id": "XuzlNPST6gxM"
+      },
+      "id": "XuzlNPST6gxM"
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 62,
       "id": "bec6529f",
       "metadata": {
-        "id": "bec6529f"
+        "id": "bec6529f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2df0c90b-c2dc-45fd-c3ec-cb61ec6ef7f3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(144, 2)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 62
+        }
+      ],
+      "source": [
+        "scale = MinMaxScaler(feature_range=(0, 1))\n",
+        "airline = scale.fit_transform(airline)\n",
+        "airline.shape"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 65,
+      "id": "a773d44d",
+      "metadata": {
+        "id": "a773d44d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f561c9f3-b375-4cc4-d57c-a58313f0710c"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "train: [[0.00699301 0.02702703]\n",
+            " [0.01398601 0.05405405]\n",
+            " [0.02097902 0.04826255]\n",
+            " [0.02797203 0.03281853]]\n",
+            "test: [[0.86713287 0.61003861]\n",
+            " [0.87412587 0.71042471]\n",
+            " [0.88111888 0.85714286]\n",
+            " [0.88811189 0.87837838]]\n"
+          ]
+        }
+      ],
+      "source": [
+        "train = airline[:123]\n",
+        "test = airline[123:]\n",
+        "print(\"train:\",train[1:5])\n",
+        "print(\"test:\",test[1:5])"
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         ""
-      ]
+      ],
+      "metadata": {
+        "id": "sKDvPAyDY-9Z"
+      },
+      "id": "sKDvPAyDY-9Z",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
@@ -3764,7 +3834,6 @@
     "colab": {
       "name": "HW4_CemS.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "collapsed_sections": [
         "5bac4167",
         "e60a3f06"
